[package]
name = "aether-rs"
version = "0.1.0"
edition = "2021"
authors = ["luohoa97 <luohoa97@users.noreply.github.com>"]
description = "A wrapper designed to allow you to install aether"
license = "MIT"
repository = "https://github.com/luohoa97/aether-rs"
readme = "README.md"
keywords = ["aether", "installer", "linux", "rpm", "deb", "flatpak"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
reqwest = { version = "*", features = ["blocking", "json"] }
serde = { version = "*", features = ["derive"] }
sha2 = "0.10"
