[package]
name = "aether-rs"
version = "0.1.0"
edition = "2021"
authors = ["luohoa97 <luohoa97@users.noreply.github.com>"]
description = "A wrapper designed to allow you to install aether"
license = "MIT"
repository = "https://github.com/luohoa97/aether-rs"
readme = "README.md"
keywords = ["aether", "installer"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
reqwest = { version = ">=0.11, <0.12", features = ["blocking", "json"] }
serde = { version = ">=1.0, <2.0", features = ["derive"] }
sha2 = ">=0.10, <0.11"

[[bin]]
name = "aether"
path = "src/main.rs"
